Fix text hidden under navbar.

--- a/ieSite/static/css/styles.css
+++ b/ieSite/static/css/styles.css
@@ -54,7 +54,7 @@ img.grayscale {
 .vert {
   vertical-align: middle;
   width:100%;
-  padding-top:4%;
+  padding-top:75px;
   text-align:center;
 }
 
@@ -89,7 +89,7 @@ img.grayscale {
   background-color:#d46054;
 }
 
-    
+
 .header h1 {
   font-size:80px;
   -webkit-text-stroke: 1px rgba(f,f,f,0.1);
@@ -140,7 +140,7 @@ img.grayscale {
 }
 
 .bright {
-  background: #dbdbdb url('http://www.bootply.com/assets/example/pt_topo.png') repeat center center fixed; 
+  background: #dbdbdb url('http://www.bootply.com/assets/example/pt_topo.png') repeat center center fixed;
   color:#777;
 }
 
@@ -162,7 +162,7 @@ img.grayscale {
   width: 140px;
   height: 140px;
   line-height: 136px;
-  vertical-align: middle; 
+  vertical-align: middle;
   text-align: center;
 }
 
@@ -175,7 +175,7 @@ img.grayscale {
   padding-top:7%;
   height: 100%;
   width: 100%;
-  background: url('http://www.bootply.com/assets/example/bg_suburb.jpg') no-repeat center center fixed; 
+  background: url('http://www.bootply.com/assets/example/bg_suburb.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
